--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ theme: jekyll-theme-chirpy
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
 # otherwise, the layout language will use the default value of 'en'.
-lang: en
+lang: zh
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
 timezone:
@@ -14,22 +14,22 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: 烧鱼の个人博客 # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: 一个用于记录知识与经验的个人网站 # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  以不负责不保真的态度记录每一件事
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
 url: "https://shaoyu-zhang.github.io"
 
 github:
-  username: Fisika137 # change to your GitHub username
+  username: Shaoyu-Zhang # change to your GitHub username
 
 twitter:
-  username: I have no Twitter account # change to your Twitter username
+  username: ShaoyuZhang4 # change to your Twitter username
 
 social:
   # Change to your full name.
