--- a/_config.yml
+++ b/_config.yml
@@ -14,32 +14,32 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: 烧鱼の个人博客 # the main title
+title: Shaoyu # the main title
 
-tagline: 一个用于记录知识与经验的个人网站 # it will display as the subtitle
+tagline: A text-focused Jekyll theme # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  以不负责不保真的态度记录每一件事
+  A minimal, responsive and feature-rich Jekyll theme for technical writing.
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "https://shaoyu-zhang.github.io"
+url: ""
 
 github:
-  username: Shaoyu-Zhang # change to your GitHub username
+  username: github_username # change to your GitHub username
 
 twitter:
-  username: ShaoyuZhang4 # change to your Twitter username
+  username: twitter_username # change to your Twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: Shaoyu Zhang
-  email: shaoyuzhang118@gmail.com # change to your email address
+  name: your_full_name
+  email: example@domain.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/guessWhat # change to your Twitter homepage
-    - https://github.com/Shaoyu-Zhang # change to your GitHub homepage
+    - https://twitter.com/username # change to your Twitter homepage
+    - https://github.com/username # change to your GitHub homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
