--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Shaoyu Blog # the main title
+title: Shaoyu # the main title
 
 tagline: A blog focus on knowledge and experience # it will display as the subtitle
 
