--- a/_config.yml
+++ b/_config.yml
@@ -6,20 +6,20 @@ theme: jekyll-theme-chirpy
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
 # otherwise, the layout language will use the default value of 'en'.
-lang: en
+lang: zh
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
-timezone:
+timezone: Asia/Shanghai
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Shaoyu # the main title
+title: 烧鱼の个人博客 # the main title
 
-tagline: A blog focus on knowledge and experience # it will display as the subtitle
+tagline: 一个以平常心记录学习与经验的独立网站 # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  It is not a producer, but a consumer
+  这里并不生产知识，这里只是经验的搬运工
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
 url: "https://shaoyu-zhang.github.io"
