--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone: Asia/Shanghai
 
 title: 烧鱼の个人博客 # the main title
 
-tagline: 一个记录学习与经验的独立网站 # it will display as the subtitle
+tagline: 一个记录学习与经验的独立网站，用好奇心做不同故事的讲述者 # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   这里并不生产智慧，这里只是知识的搬运工。
